# RepteriCsomagok

./: CMakeLists.txt  CMakePresets.json  README.md  belt.cpp  belt.h  bfs.cpp  bfs.h  bfsData.h  buildcommand.txt  controlcenter.cpp  controlcenter.h  dokumentacio.docx  io.cpp  io.h  junction.cpp  junction.h  list.cpp  list.h  main.cpp  main.h  package.cpp  package.h  path.cpp  path.h  specifikacio.docx  standard_input.txt  terv.docx  test_adatok.txt  test_output.txt
